--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 }
 
 .principal {
-    background-image: url("img/background.png");
+    background-image: url("img/Background.svg");
     background-repeat: no-repeat;
     background-size: contain;
     align-items: center;
